// version
syntax = "proto3";

// package
option go_package = "./pb";
package relation;
message AddRequest {
  uint64 ownerId = 1;
  uint64 targetId = 2;
  string msg = 4;
}
message AddRes {
  uint64 ownerId = 1;
  uint64 targetId = 2;
  string msg = 4;
  string remark = 5;
  string name = 6;
}
message Friend {
  uint64 id = 1;
  string name = 2;
  string remark = 3;
  string avatar = 4;
  string email = 5;
  string phone = 6;
  bool gender = 7;
  string line = 8;
}
message GetFriendsRequest {
  uint64 ownerId = 1;
}
message GetFriendsRes {
  repeated Friend friends = 1;
  int32 code = 2;
  string msg = 3;
}
message CreateGroupRequest {
  uint64 ownerId = 1;
  string name = 2;
  string avatar = 3;
  string desc = 4;
}